--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,3 +24,8 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+    - name: Save to artifacts
+      uses: actions/upload-artifact@v3.1.2
+      with:
+        name: app
+        path: ${{ github.workspace}} /app/build/outputs/apk/release/app-release.apk
