--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: bash ./gradlew :app:assembleDebug
     - name: Save to artifacts
       uses: actions/upload-artifact@v3.1.2
       with:
