--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -27,5 +27,5 @@ jobs:
     - name: Save to artifacts
       uses: actions/upload-artifact@v3.1.2
       with:
-        name: app
-        path: ${{ github.workspace }}/app/build/outputs/apk/release/app-debug.apk
+        name: app.apk
+        path: /app/build/outputs/apk/debug/app-debug.apk
