--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,9 +23,11 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
+      run: ./gradlew build
+    - name: Assemble Debug
       run: ./gradlew assembleDebug
     - name: Save to artifacts
       uses: actions/upload-artifact@v3.1.2
       with:
         name: app
-        path: /app/build/outputs/apk/debug/
+        path: app/build/outputs/apk/debug/app-debug.apk
