--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,5 +29,5 @@ jobs:
     - name: Save to artifacts
       uses: actions/upload-artifact@v3.1.2
       with:
-        name: app
+        name: app.apk
         path: app/build/outputs/apk/debug/app-debug.apk
